src/styles/crew.css
.container {
    padding-top: 100px;
    padding-bottom: 100px;
}

.image-cont {
    margin-top: 40px;
    text-align: center;
}

.crew-image {
    height: auto;
    width: 100%;
    min-width: 150px;
    max-width: 180px;
}

.navs-crew {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 20px 0;
}

.nav-crew {
    height: 15px;
    width: 15px;
    background-color: gray;
    border-radius: 50%;
    cursor: pointer;
}

.crew-role {
    font-family: 'Bellefair', serif;
    font-size: 18px;
    color: gray;
    text-transform: uppercase;
    text-align: center;
}

.crew-name {
    font-family: 'Bellefair', serif;
    font-size: 25px;
    color: #FFFFFF;
    text-transform: uppercase;
    text-align: center;
}

.crew-about {
    font-size: 16px;
    color: #D0D6F9;
    text-align: center;
    margin-top: 15px;
}

.active-crew {
    height: 15px;
    width: 15px;
    background-color: #FFFFFF;
    border-radius: 50%;
    cursor: pointer;
}

.nav-crew:hover {
    background-color: gainsboro;
}

@media (max-width: 640px) {
    .body-crew {
        background-image: url('/src/assets/crew/background-crew-mobile.jpg');
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
    }
}

@media (min-width: 641px) and (max-width: 1007px) {
    .body-crew {
        background-image: url('/src/assets/crew/background-crew-tablet.jpg');
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
    }
    .lo {
        margin-top: 50px;
        display: flex;
        flex-direction: column-reverse;
    }
    .det-lo {
        padding: 0 40px;
    }
    .image-cont {
        margin-top: 0;
    }
    .crew-image {
        min-width: 200px;
        max-width: 300px;
    }
    .container {
        padding-top: 100px;
        padding-bottom: 0;
    }
    .crew-role {
        font-size: 22px;
    }
    .crew-name {
        font-size: 28px;
    }
    .navs-crew {
        padding: 40px 0;
    }
}

@media (min-width: 1008px) {
    .body-crew {
        background-image: url('/src/assets/crew/background-crew-desktop.jpg');
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
    }
}

